--- a/templates/graylog.server.default.j2
+++ b/templates/graylog.server.default.j2
@@ -1,4 +1,12 @@
+# Path to the java executable.
 JAVA=/usr/bin/java
+
+# Default Java options for heap and garbage collection.
 GRAYLOG_SERVER_JAVA_OPTS="{{ graylog_server_java_opts }}"
+
+# Default Java options for heap and garbage collection.
 GRAYLOG_SERVER_ARGS="{{ graylog_server_args }}"
+
+# Program that will be used to wrap the graylog-server command. Useful to
+# support programs like authbind.
 GRAYLOG_COMMAND_WRAPPER="{{ graylog_server_wrapper }}"
